force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/XactlyExpress__XCFiscalYearSettings__c.object-meta.xml
<CustomObject>
    <label>XCFiscalYearSettings</label>
    <nameField>
        <label>XCFiscalYearSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCFiscalYearSettings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>