force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__IsStandardYear__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsStandardYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStandardYear</label>
    <type>Checkbox</type>
</CustomField>