force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__PeriodId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PeriodId</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCFiscalYearSettings</relationshipLabel>
    <relationshipName>XCFiscalYearSettings</relationshipName>
    <type>Lookup</type>
</CustomField>