force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__PeriodLabelScheme__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodLabelScheme__c</fullName>
    <label>PeriodLabelScheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NumberByYear</fullName>
            </value>
            <value>
                <fullName>NumberByQuarter</fullName>
            </value>
            <value>
                <fullName>StandardMonths</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>