force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__Source__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Source__c</fullName>
    <label>Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>