force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__WeekLabelScheme__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__WeekLabelScheme__c</fullName>
    <label>WeekLabelScheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NumberByYear</fullName>
            </value>
            <value>
                <fullName>NumberByQuarter</fullName>
            </value>
            <value>
                <fullName>NumberByPeriod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>