force-app/main/default/objects/XactlyExpress__XCFiscalYearSettings__c/fields/XactlyExpress__WeekStartDay__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__WeekStartDay__c</fullName>
    <label>WeekStartDay</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>